--- a/style.css
+++ b/style.css
@@ -17,33 +17,40 @@ button::before, button::after {
     box-shadow: inset -10.5em 0 0 0 #123123, inset 10.5em 0 0 0 #123123;
 }
 
-.btn-2::after {
-    height: 0;
-    left: 0;
-    top: 0;
-    transition-duration: 0.6s;
-    width: 100%;
+.btn-2 {
+    width: 170px;
+  height: 60px;
+  font-size: 18px;
+  background: #fff;
+  border: none;
+  border-radius: 50px;
+  color: #000;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.4s;
 }
 
-.btn-2:hover::after {
-    height: 100%;
+.btn-2:hover {
+    box-shadow: inset 0 0 0 4px #ef476f, 
+              inset 0 0 0 8px #ffd166, 
+              inset 0 0 0 12px #06d6a0,
+              inset 0 0 0 16px #118ab2;
+  background: #073b4c;
+  color: #fff;
 }
 
-.btn-2B::after {
-    height: 0;
-    left: 0;
-    bottom: 0;
-    transition-duration: 0.6s;
-    width: 100%;
-}
-
-.btn-2B:hover::after {
-    height: 100%;
+.btn-3 {
+    background-color: #321321;
+    color: yellow;
 }
 
 .btn-3:hover {
     background-color: #45ff23;
     box-shadow: 0 0 5px #45ff23, 0 0 25px #45ff23, 0 0 200px #45ff23;
+}
+
+.btn-4 {
+    background-color: #06d6a0;
 }
 
 .btn-4:hover {
@@ -62,18 +69,223 @@ button::before, button::after {
     width: 0;
 }
 
-.btn-5:hover::after {
-    height: 100%;
-    width: 135%;
+.btn-5 {
+    padding: 0.6em 1em;
+    border: 4px solid #123452;
+    transition: ease-in-out 0.3s;
+    background-color: #3cce5c;
+    color: #123452;
+    font-weight: bolder;
+    font-size: 16px;
 }
 
-.btn-6:hover:after {
+.btn-5:hover {
+    transform: scale(1.2) rotate(10deg);
+    background-color: #fa725a;
+    color: white;
+}
+.btn-6 {
+    background: transparent;
+    color: #fff;
+    font-size: 17px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border: none;
+    padding: 20px 30px;
+    perspective: 30rem;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.308);
+}
+
+.btn-6::before {
+    content: 'Flip';
+    display: block;
+    position: absolute;
     width: 100%;
-    color: #232232;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(320deg, rgba(0,140,255,0.678), rgba(128, 0, 128, 0.308));
+    z-index: 1;
+    transition: 3s;
+}
+
+.btn-6:hover::before {
+    animation: rotate 1s;
+    transition: all .5s;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateY(180deg);
+    }
+    100% {
+        transform: rotateY(360deg);
+    }
 }
 
 .btn-7:hover {
-    border: 2px solid #3cce5c;
+    border: 10px solid #3cce5c;
     color: #321321;
     background-color: #7078e8;
+}
+
+.btn-8 {
+    transform: rotate(-25deg) skew(25deg);
+    transform-style: preserve-3d;
+    position: relative;
+    list-style: none;
+    width: 100px;
+    height: 32px;
+    border: none;
+    background: transparent;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+.btn-8:before {
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: -5px;
+    width: 100%;
+    height: 10px;
+    background: #2a2a2a;
+    transform: skewX(-41deg);
+}
+
+.btn-8:after {
+    content: '';
+    position: absolute;
+    top: 5px;
+    left: -9px;
+    width: 9px;
+    height: 100%;
+    background: #2a2a2a;
+    transform: skewY(-49deg);
+}
+
+.btn-8 span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #2a2a2a;
+    color: white;
+    font-size: 25px;
+    transition: 1.1s ease-out;
+}
+
+.btn-8:hover span {
+    z-index: 1000;
+    transition: .3s;
+    color: #fff;
+  }
+  
+.btn-8:hover span:nth-child(5) {
+    transform: translate(40px, -40px);
+    opacity: 1;
+  }
+  
+.btn-8:hover span:nth-child(4) {
+    transform: translate(30px, -30px);
+    opacity: .8;
+  }
+  
+.btn-8:hover span:nth-child(3) {
+    transform: translate(20px, -20px);
+    opacity: .6;
+  }
+  
+.btn-8:hover span:nth-child(2) {
+    transform: translate(10px, -10px);
+    opacity: .4;
+  }
+  
+.btn-8:hover span:nth-child(1) {
+    transform: translate(0px, 0px);
+    opacity: .2;
+  }
+  
+.btn-8:active span:nth-child(5) {
+    transform: translate(20px, -20px);
+    opacity: 1;
+  }
+  
+.btn-8:active span:nth-child(4) {
+    transform: translate(15px, -15px);
+  }
+  
+.btn-8:active span:nth-child(3) {
+    transform: translate(10px, -10px);
+  }
+  
+.btn-8:active span:nth-child(2) {
+    transform: translate(5px, -5px);
+  }
+  
+.btn-8:active span:nth-child(1) {
+    transform: translate(0px, 0px);
+  }
+  
+.btn-8:nth-child(1):hover span {
+    background: #52E19F;
+  }
+
+.btn-9 {
+    display: flex;
+}
+
+.box {
+    width: 35px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-weight: 700;
+    color: white;
+    transition: all .8s;
+    cursor: pointer;
+    position: relative;
+    background: rgb(58, 165, 253);
+    overflow: hidden;
+}
+
+.box:before {
+    content: 'W';
+    position: absolute;
+    top: 0;
+    background: #0f0f0f;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(100%);
+    transition: transform .4s;
+}
+
+.box:nth-child(2)::before {
+    transform: translateY(-100%);
+    content: 'O';
+}
+
+.box:nth-child(3)::before {
+    content: 'R';
+}
+
+.box:nth-child(4)::before {
+    transform: translateY(-100%);
+    content: 'L';
+}
+
+.box:nth-child(5)::before {
+    content: 'D';
+}
+
+.btn-9:hover .box:before {
+    transform: translateY(0);
 }
